# salary_prediction

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
airflow/dags/: salary_pipeline_dag.py
data/: cleaned_data.csv  job_data.csv
data/processed/: cleaned_data.csv
data/raw/: job_data.csv
src/: data_processing.py  fast_api.py  main.py  model_building.py
src/pipelines_airflow/: data_fetcher.py  oracle_loader.py
tests/: test_data_processing.py  test_fast_api.py  test_model_building.py
