[tool.poetry]
name = "salary_prediction"
version = "0.1.0"
description = "Salary prediction machine learning project"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.2"
pydantic = "^2.8.2"
pandas = "^2.2.2"
httpx = "^0.27.2"
uvicorn = "^0.15.0"
joblib = "^1.3.2"
scikit-learn = "^1.3.0"
click = "^8.1.7"  # Add this line

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
mypy = "^1.11.2"
black = "^24.8.0"
pylint = "^3.2.6"
coverage = "^7.6.1"
pytest-mock = "^3.14.0"
pytest-fastapi = "^0.1.0"
pytest-benchmark = "^4.0.0"
pytest-cov = "^5.0.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | env
    | venv
)/
'''

[tool.pylint]
# Sample pylint configuration
max-line-length = 120

[tool.mypy]
# Update Python version to 3.10 for consistency
python_version = 3.12
pretty = true
show_traceback = true
color_output = true

allow_redefinition = false
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
ignore_missing_imports = true
implicit_reexport = false
no_implicit_optional = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
strict_equality = true
strict_optional = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true
exclude = ["venv", ".venv"]

[tool.pytest.ini_options]
python_files = "test_*.py"
python_functions = "test_*"